<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">CasHub</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="welcome">Welcome</string>
    <string name="are_you_already_registered">Are you already registered?</string>
    <string name="password" translatable="false">Password</string>
    <string name="did_you_forget_your_password">Did you forget your password?</string>
    <string name="login">Login</string>
    <string name="email" translatable="false">Email</string>
    <string name="or">OR</string>
    <string name="login_with_google">Login with Google</string>
    <string name="not_account">Register</string>
    <string name="nickname">Nickname</string>
    <string name="already_have_account">You already have an account?</string>
    <string name="register">Register</string>
    <string name="register_with_google">Register with Google</string>
    <string name="transaction_type_in">Income</string>
    <string name="transaction_type_exit">Expense</string>
    <string name="transaction_name">Name</string>
    <string name="transaction_quantity">Quantity</string>
    <string name="transaction_category">Category</string>
    <string name="transaction_select_category">Select Category</string>
    <string name="transaction_more_options">More options</string>
    <string name="transaction_split_expense">Split expense</string>
    <string name="transaction_confirm">Confirm</string>
    <string name="check_email">Check your email</string>
    <string name="check_password">Check your password</string>
    <string name="titoli_title" tools:ignore="MissingTranslation">STOCK</string>
    <string name="portfolio_return" tools:ignore="MissingTranslation" translatable="false">N €   M %</string>
    <string name="stock_name1" tools:ignore="MissingTranslation">Name1</string>
    <string name="stock_name2">Name2</string>
    <string name="stock_name3">Name3</string>
    <string name="add_stock">Add stock</string>
    <string name="remove_stock" tools:ignore="MissingTranslation">Remove stock</string>
    <string name="home_label" tools:ignore="MissingTranslation">Home</string>
    <string name="check_nickname">Insert a valid Nickname</string>
    <string name="nickname_too_short">The Nickname must have 3 characters</string>
    <string name="invalid_password">The Password must have 8 characters</string>
    <string name="error_retrieving_agencies">Error retrieving agencies</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="Monthly_expenses">Monthly Expenses</string>
    <string name="Graph">Graphic</string>
    <string name="Stock_name_id">Stock Name</string>
    <string name="Quantity">Quantity</string>

    <!-- Errors -->
    <string name="error_credentials">Check your credentials</string>
    <string name="error_email_login">Check your email</string>
    <string name="error_password_login">The password must have at least 8 characters</string>
    <string name="error_retrieving_news">There was an error retrieving the news</string>
    <string name="error_no_internet">No internet connection</string>
    <string name="error_collision_user">This email is already registered</string>
    <string name="error_unexpected">Unexpected error</string>
    <string name="error_invalid_user">Invalid user</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="lorem_ipsum" translatable="false">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="confirm_password">Confirm password</string>
    <string name="add_transaction">Add transaction</string>
    <string name="remove_transaction">Remove Transaction</string>
    <string name="no_agency_found">No agencies found</string>
    <string name="search_agency">Search agency</string>
    <string name="name">Name</string>
    <string name="Amount">Amount</string>
    <string name="Type">Type</string>
    <string name="Currency">Currency</string>
    <string name="CompanyName">Company Name</string>
    <string name="currentValue">Current Value</string>
    <string name="QuantityNumber" translatable="false">Quantity Number</string>
    <string name="AveragePrice">medium Price</string>
    <string name="AveragePriceNumber" translatable="false">AveragePriceNumber</string>
    <string name="ExchangeInfo">ExchangeInfo</string>
    <string name="Symbol">Symbol</string>
    <string name="Exchange">Exchange</string>
    <string name="AddToPortfolio">Add to your portfolio</string>
    <string name="balance">balance</string>
    <string name="EmptyPortfolio">Empty Portfolio</string>
    <string name="sellAction">sell Action</string>
    <string name="buyAction">buy Action</string>
    <string name="actionMenu">action Menu</string>
    <string name="ExchangeFull" translatable="false">Exchange Full</string>
    <string name="empty_portfolio">No stocks in portfolio</string>
    <string name="price_format">€%.2f</string>
    <string name="change_format">€%.2f (%.2f%%)</string>
    <string name="portfolio_value">Portfolio Value</string>
    <string name="historical_data_unavailable">Historical data unavailable</string>
    <string name="not_logged_in">You are not logged in!</string>
    <string name="no_stocks_to_sell">No stocks to sell</string>
    <string name="cancel">Cancel</string>
    <string name="quantity_to_sell">Quantity to sell</string>
    <string name="owned_stocks">Owned: %s shares</string>
    <string name="average_price">Average price: %s%s</string>
    <string name="total_value">Total value: %s%s</string>
    <string name="quantity_placeholder">Quantity to sell</string>
    <string name="cannot_sell_more">You cannot sell more than %s shares</string>
    <string name="sell_value">Sale value: %s%s</string>
    <string name="sell">SELL</string>
    <string name="insert_quantity">Enter a quantity</string>
    <string name="quantity_must_be_positive">Quantity must be &gt; 0</string>
    <string name="cannot_sell_more_than_owned">You cannot sell more than %s shares</string>
    <string name="invalid_quantity">Invalid quantity</string>
    <string name="confirm_sale">Confirm sale</string>
    <string name="sell_completely">sell completely</string>
    <string name="sell_action">sell</string>
    <string name="about_to_sell">You are about to %1$s:\n\n%2$s\nQuantity: %3$s shares\nValue: %4$s%5$s\n</string>
    <string name="remaining_stocks">\nRemaining: %s shares</string>
    <string name="irreversible_action">\n\nThis action is irreversible.</string>
    <string name="stock_info_format">%1$s\n%2$s\n%3$s\n%4$s</string>
    <string name="symbol_label">Symbol: %s</string>
    <string name="currency_label">\nCurrency: %s</string>
    <string name="exchange_label">\nExchange: %s</string>
    <string name="invalid_symbol">Invalid symbol</string>
    <string name="price_label">Price</string>
    <string name="price_info">Price: %1$s%2$s\n\nDaily change: %1$s%3$s (%4$s)</string>
    <string name="data_not_loaded">Data not yet loaded</string>
    <string name="error_not_logged_in">ERROR: You are not logged in!</string>
    <string name="buy_stock_title">Buy %s</string>
    <string name="current_price">Current price: %s%s</string>
    <string name="quantity_hint">Quantity</string>
    <string name="confirm">CONFIRM</string>
    <string name="error_missing_price">Error: price data missing</string>
    <string name="error_parsing_price">Error parsing price</string>
    <string name="purchase_success">Purchased %1$s shares of %2$s!</string>
    <string name="added_checkmark">Added ✓</string>
    <string name="error_label">Error: %s</string>
    <string name="error_loading_data">Error loading data: %s</string>
    <string name="unable_to_load_chart">Unable to load chart</string>
    <string name="welcome_user">Hi, %1$s!</string>
    <string name="welcome_app">Welcome to CasHub!</string>
    <string name="logout_confirm_title">Confirm logout</string>
    <string name="logout_confirm_message">Are you sure you want to log out?</string>
    <string name="logout">Logout</string>
    <string name="logout_success">Logged out successfully</string>
</resources>