<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_theme_background"
    tools:context=".ui.home.fragment.StockDetailsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp">

        <TextView
            android:id="@+id/StockName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/CompanyName"
            android:textStyle="bold"
            android:textSize="24sp"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:id="@+id/textExchangeFull"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ExchangeInfo"
            android:textSize="16sp"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:id="@+id/textSymbol"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Symbol"
            android:textSize="16sp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"/>


        <TextView
            android:id="@+id/textCurrency"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Currency"
            android:textSize="16sp"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:id="@+id/textExchange"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Exchange"
            android:textSize="16sp"
            android:layout_marginBottom="16dp"/>

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/weeklyChart"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"/>

        <Button
            android:id="@+id/btnAddToPortfolio"
            style="@style/Widget.Material3.Button.ElevatedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/AddToPortfolio"
            android:textAppearance="@style/FontMainMedium" />

    </LinearLayout>
</ScrollView>