<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".LoginFragment"
    android:background="@color/md_theme_background">
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        app:srcCompat="@drawable/logonoback"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="@dimen/margin"
        android:layout_marginTop="@dimen/margin"

        style="?attr/textInputOutlinedStyle"
        android:background="#05000000"

        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEmail"
            android:textAppearance="@style/FontMainLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00000000"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginEnd="@dimen/margin"
        android:layout_marginTop="@dimen/margin"
        style="?attr/textInputOutlinedStyle"
        android:background="#05000000"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputPassword"
            android:textAppearance="@style/FontMainLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00000000"/>
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:gravity="center|start"
        android:textAppearance="@style/FontMainSmall"
        android:text="@string/are_you_already_registered"
        />
    <Button
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:gravity="center|start"
        android:textAppearance="@style/FontMainSmall"
        android:text="@string/did_you_forget_your_password"
        />
    <Button
        android:id="@+id/login_button"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:textAppearance="@style/FontMainMedium"

        android:layout_gravity="center"
        />
    <RelativeLayout
        android:layout_marginTop="@dimen/margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp">
        <View
            android:layout_width="100dp"
            android:layout_height="1dp"
            android:layout_toStartOf="@id/text_or"
            android:layout_marginEnd="@dimen/margin"
            android:layout_centerInParent="true"
            android:background="#555"/>
        <TextView
            android:id="@+id/text_or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textAppearance="@style/FontMainMedium"
            android:text="@string/or" />
        <View
            android:layout_width="100dp"
            android:layout_height="1dp"
            android:layout_marginStart="@dimen/margin"
            android:layout_toEndOf="@id/text_or"
            android:layout_centerInParent="true"
            android:background="#555"/>
    </RelativeLayout>
    <Button
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_with_google"
        android:textAppearance="@style/FontMainMedium"

        android:layout_marginTop="@dimen/margin"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_gravity="center"
        app:icon="@drawable/icon_google"
        app:iconGravity="textStart"
        app:iconTint="@null"
        />
</LinearLayout>